# bsec-bm680-linux

./: .gitignore  CMakeLists.txt  Main.c  Makefile  basic.c
bme680_iaq_33v_3s_4d/: bsec_iaq.state
bme68x/: bme68x.c  bme68x_defs.h
bsec_integration/: bsec_integration.c  bsec_integration.h
common/: driver.c  driver.h
inc/: bsec_datatypes.h  bsec_interface_multi.h
